--- a/application/views/layout.jade
+++ b/application/views/layout.jade
@@ -2,6 +2,9 @@
 html(lang="en")
   head
     title Hyjal
+    link(rel='stylesheet', href='/stylesheets/reset.css')
+    link(rel='stylesheet', href='/stylesheets/text.css')
+    link(rel='stylesheet', href='/stylesheets/960.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     section#wrapper!= body
