--- a/application/views/layout.jade
+++ b/application/views/layout.jade
@@ -7,4 +7,13 @@ html(lang="en")
     link(rel='stylesheet', href='/stylesheets/960.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    section#wrapper!= body
+    header
+      nav
+        ul
+          li
+            a(href="/") Home
+          li
+            a(href="/about") About
+          li
+            a(href="/contact") Contact
+    div.container_12!= body
